fix: Table population Doris fixes [DHIS-16705] (#19222)