@@ -51,7 +51,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.hisp.dhis.analytics.AnalyticsTableHookService;
 import org.hisp.dhis.analytics.AnalyticsTableType;
@@ -103,41 +102,7 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
 
   static final String[] EXPORTABLE_EVENT_STATUSES = {"'COMPLETED'", "'ACTIVE'", "'SCHEDULE'"};
 
-  protected static final List<AnalyticsTableColumn> FIXED_COLS =
-      List.of(
-          EventAnalyticsColumn.EVENT,
-          EventAnalyticsColumn.ENROLLMENT,
-          EventAnalyticsColumn.PS,
-          EventAnalyticsColumn.AO,
-          EventAnalyticsColumn.ENROLLMENT_DATE,
-          EventAnalyticsColumn.ENROLLMENT_OCCURRED_DATE,
-          EventAnalyticsColumn.OCCURRED_DATE,
-          EventAnalyticsColumn.SCHEDULED_DATE,
-          EventAnalyticsColumn.COMPLETED_DATE,
-          EventAnalyticsColumn.CREATED,
-          EventAnalyticsColumn.LAST_UPDATED,
-          EventAnalyticsColumn.STOREDBY,
-          EventAnalyticsColumn.CREATED_BY_USERNAME,
-          EventAnalyticsColumn.CREATED_BY_NAME,
-          EventAnalyticsColumn.CREATED_BY_LASTNAME,
-          EventAnalyticsColumn.CREATED_BY_DISPLAYNAME,
-          EventAnalyticsColumn.LAST_UPDATED_BY_USERNAME,
-          EventAnalyticsColumn.LAST_UPDATED_BY_NAME,
-          EventAnalyticsColumn.LAST_UPDATED_BY_LASTNAME,
-          EventAnalyticsColumn.LAST_UPDATED_BY_DISPLAYNAME,
-          EventAnalyticsColumn.EVENT_STATUS,
-          EventAnalyticsColumn.ENROLLMENT_STATUS,
-          EventAnalyticsColumn.EVENT_GEOMETRY,
-          EventAnalyticsColumn.LONGITUDE,
-          EventAnalyticsColumn.LATITUDE,
-          EventAnalyticsColumn.OU,
-          EventAnalyticsColumn.OU_NAME,
-          EventAnalyticsColumn.OU_CODE,
-          EventAnalyticsColumn.OU_LEVEL,
-          EventAnalyticsColumn.OU_GEOMETRY,
-          EventAnalyticsColumn.ENROLLMENT_GEOMETRY,
-          EventAnalyticsColumn.REGISTRATION_OU,
-          EventAnalyticsColumn.ENROLLMENT_OU);
+  protected final List<AnalyticsTableColumn> fixedColumns;
 
   public JdbcEventAnalyticsTableManager(
       IdentifiableObjectManager idObjectManager,
@@ -167,6 +132,7 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
         analyticsExportSettings,
         periodDataProvider,
         sqlBuilder);
+    fixedColumns = EventAnalyticsColumn.getColumns(sqlBuilder);
   }
 
   @Override
@@ -313,13 +279,13 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
     String sql =
         replaceQualify(
             """
-            select ev.eventid \
-            from ${event} ev \
-            inner join ${enrollment} en on ev.enrollmentid=en.enrollmentid \
-            where en.programid = ${programId} \
-            and ev.lastupdated >= '${startDate}' \
-            and ev.lastupdated < '${endDate}' \
-            limit 1;""",
+                    select ev.eventid \
+                    from ${event} ev \
+                    inner join ${enrollment} en on ev.enrollmentid=en.enrollmentid \
+                    where en.programid = ${programId} \
+                    and ev.lastupdated >= '${startDate}' \
+                    and ev.lastupdated < '${endDate}' \
+                    limit 1;""",
             Map.of(
                 "programId", String.valueOf(program.getId()),
                 "startDate", toLongDate(startDate),
@@ -336,14 +302,14 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
       String sql =
           replaceQualify(
               """
-              delete from ${tableName} ax \
-              where ax.event in ( \
-              select ev.uid \
-              from ${event} ev \
-              inner join ${enrollment} en on ev.enrollmentid=en.enrollmentid \
-              where en.programid = ${programId} \
-              and ev.lastupdated >= '${startDate}' \
-              and ev.lastupdated < '${endDate}');""",
+                      delete from ${tableName} ax \
+                      where ax.event in ( \
+                      select ev.uid \
+                      from ${event} ev \
+                      inner join ${enrollment} en on ev.enrollmentid=en.enrollmentid \
+                      where en.programid = ${programId} \
+                      and ev.lastupdated >= '${startDate}' \
+                      and ev.lastupdated < '${endDate}');""",
               Map.of(
                   "tableName", qualify(table.getName()),
                   "programId", String.valueOf(table.getProgram().getId()),
@@ -373,28 +339,28 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
     String fromClause =
         replaceQualify(
             """
-            \sfrom ${event} ev \
-            inner join ${enrollment} en on ev.enrollmentid=en.enrollmentid \
-            inner join ${programstage} ps on ev.programstageid=ps.programstageid \
-            inner join ${program} pr on en.programid=pr.programid and en.deleted = false \
-            inner join ${categoryoptioncombo} ao on ev.attributeoptioncomboid=ao.categoryoptioncomboid \
-            left join ${trackedentity} te on en.trackedentityid=te.trackedentityid and te.deleted = false \
-            left join ${organisationunit} registrationou on te.organisationunitid=registrationou.organisationunitid \
-            inner join ${organisationunit} ou on ev.organisationunitid=ou.organisationunitid \
-            left join analytics_rs_orgunitstructure ous on ev.organisationunitid=ous.organisationunitid \
-            left join analytics_rs_organisationunitgroupsetstructure ougs on ev.organisationunitid=ougs.organisationunitid \
-            and (cast(${eventDateMonth} as date)=ougs.startdate or ougs.startdate is null) \
-            left join ${organisationunit} enrollmentou on en.organisationunitid=enrollmentou.organisationunitid \
-            inner join analytics_rs_categorystructure acs on ev.attributeoptioncomboid=acs.categoryoptioncomboid \
-            left join analytics_rs_dateperiodstructure dps on cast(${eventDateExpression} as date)=dps.dateperiod \
-            where ev.lastupdated < '${startTime}' ${partitionClause} \
-            and pr.programid=${programId} \
-            and ev.organisationunitid is not null \
-            and (${eventDateExpression}) is not null \
-            and dps.year >= ${firstDataYear} \
-            and dps.year <= ${latestDataYear} \
-            and ev.status in (${exportableEventStatues}) \
-            and ev.deleted = false""",
+                    \sfrom ${event} ev \
+                    inner join ${enrollment} en on ev.enrollmentid=en.enrollmentid \
+                    inner join ${programstage} ps on ev.programstageid=ps.programstageid \
+                    inner join ${program} pr on en.programid=pr.programid and en.deleted = false \
+                    inner join ${categoryoptioncombo} ao on ev.attributeoptioncomboid=ao.categoryoptioncomboid \
+                    left join ${trackedentity} te on en.trackedentityid=te.trackedentityid and te.deleted = false \
+                    left join ${organisationunit} registrationou on te.organisationunitid=registrationou.organisationunitid \
+                    inner join ${organisationunit} ou on ev.organisationunitid=ou.organisationunitid \
+                    left join analytics_rs_orgunitstructure ous on ev.organisationunitid=ous.organisationunitid \
+                    left join analytics_rs_organisationunitgroupsetstructure ougs on ev.organisationunitid=ougs.organisationunitid \
+                    and (cast(${eventDateMonth} as date)=ougs.startdate or ougs.startdate is null) \
+                    left join ${organisationunit} enrollmentou on en.organisationunitid=enrollmentou.organisationunitid \
+                    inner join analytics_rs_categorystructure acs on ev.attributeoptioncomboid=acs.categoryoptioncomboid \
+                    left join analytics_rs_dateperiodstructure dps on cast(${eventDateExpression} as date)=dps.dateperiod \
+                    where ev.lastupdated < '${startTime}' ${partitionClause} \
+                    and pr.programid=${programId} \
+                    and ev.organisationunitid is not null \
+                    and (${eventDateExpression}) is not null \
+                    and dps.year >= ${firstDataYear} \
+                    and dps.year <= ${latestDataYear} \
+                    and ev.status in (${exportableEventStatues}) \
+                    and ev.deleted = false""",
             Map.of(
                 "eventDateMonth", sqlBuilder.dateTrunc("month", eventDateExpression),
                 "eventDateExpression", eventDateExpression,
@@ -434,8 +400,7 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
    * @return a list of {@link AnalyticsTableColumn}.
    */
   private List<AnalyticsTableColumn> getColumns(Program program) {
-    List<AnalyticsTableColumn> columns = new ArrayList<>();
-    columns.addAll(FIXED_COLS);
+    List<AnalyticsTableColumn> columns = new ArrayList<>(fixedColumns);
 
     if (program.hasNonDefaultCategoryCombo()) {
       List<Category> categories = program.getCategoryCombo().getCategories();
@@ -464,13 +429,13 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
         program.getAnalyticsDataElements().stream()
             .map(de -> getColumnFromDataElement(de, false))
             .flatMap(Collection::stream)
-            .collect(Collectors.toList()));
+            .toList());
 
     columns.addAll(
         program.getAnalyticsDataElementsWithLegendSet().stream()
             .map(de -> getColumnFromDataElement(de, true))
             .flatMap(Collection::stream)
-            .collect(Collectors.toList()));
+            .toList());
 
     columns.addAll(
         program.getNonConfidentialTrackedEntityAttributes().stream()
@@ -479,7 +444,7 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
                     getColumnFromTrackedEntityAttribute(
                         tea, getNumericClause(), getDateClause(), false))
             .flatMap(Collection::stream)
-            .collect(Collectors.toList()));
+            .toList());
 
     columns.addAll(
         program.getNonConfidentialTrackedEntityAttributesWithLegendSet().stream()
@@ -488,11 +453,13 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
                     getColumnFromTrackedEntityAttribute(
                         tea, getNumericClause(), getDateClause(), true))
             .flatMap(Collection::stream)
-            .collect(Collectors.toList()));
+            .toList());
 
     if (program.isRegistration()) {
       columns.add(EventAnalyticsColumn.TRACKED_ENTITY);
-      columns.add(EventAnalyticsColumn.TRACKED_ENTITY_GEOMETRY);
+      if (sqlBuilder.supportsGeospatialData()) {
+        columns.add(EventAnalyticsColumn.TRACKED_ENTITY_GEOMETRY);
+      }
     }
 
     return filterDimensionColumns(columns);
@@ -534,12 +501,12 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
     String selectClause = getSelectClause(attribute.getValueType(), "value");
     String query =
         """
-          \s(select l.uid from ${maplegend} l \
-          inner join ${trackedentityattributevalue} av on l.startvalue <= ${selectClause} \
-          and l.endvalue > ${selectClause} \
-          and l.maplegendsetid=${legendSetId} \
-          and av.trackedentityid=en.trackedentityid \
-          and av.trackedentityattributeid=${attributeId} ${numericClause}) as ${column}""";
+              \s(select l.uid from ${maplegend} l \
+              inner join ${trackedentityattributevalue} av on l.startvalue <= ${selectClause} \
+              and l.endvalue > ${selectClause} \
+              and l.maplegendsetid=${legendSetId} \
+              and av.trackedentityid=en.trackedentityid \
+              and av.trackedentityattributeid=${attributeId} ${numericClause}) as ${column}""";
 
     return attribute.getLegendSets().stream()
         .map(
@@ -667,8 +634,8 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
   private String selectForInsert(DataElement dataElement, String fromType, String dataClause) {
     return replaceQualify(
         """
-        (select ${fromType} from ${event} \
-        where eventid=ev.eventid ${dataClause})${closingParentheses} as ${dataElementUid}""",
+            (select ${fromType} from ${event} \
+            where eventid=ev.eventid ${dataClause})${closingParentheses} as ${dataElementUid}""",
         Map.of(
             "fromType",
             fromType,
@@ -684,11 +651,11 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
       DataElement dataElement, String select, String dataClause) {
     String query =
         """
-        (select l.uid from ${maplegend} l
-        inner join ${event} on l.startvalue <= ${select}
-        and l.endvalue > ${select}
-        and l.maplegendsetid=${legendSetId}
-        and eventid=ev.eventid ${dataClause}) as ${column}""";
+            (select l.uid from ${maplegend} l
+            inner join ${event} on l.startvalue <= ${select}
+            and l.endvalue > ${select}
+            and l.maplegendsetid=${legendSetId}
+            and eventid=ev.eventid ${dataClause}) as ${column}""";
 
     return dataElement.getLegendSets().stream()
         .map(
@@ -742,17 +709,17 @@ public class JdbcEventAnalyticsTableManager extends AbstractEventJdbcTableManage
     String sql =
         replaceQualify(
             """
-            select temp.supportedyear from \
-            (select distinct extract(year from ${eventDateExpression}) as supportedyear \
-            from ${event} ev \
-            inner join ${enrollment} en on ev.enrollmentid = en.enrollmentid \
-            where ev.lastupdated <= '${startTime}' and en.programid = ${programId} \
-            and (${eventDateExpression}) is not null \
-            and (${eventDateExpression}) > '1000-01-01' \
-            and ev.deleted = false \
-            ${fromDateClause}) as temp \
-            where temp.supportedyear >= ${firstDataYear} \
-            and temp.supportedyear <= ${latestDataYear}""",
+                    select temp.supportedyear from \
+                    (select distinct extract(year from ${eventDateExpression}) as supportedyear \
+                    from ${event} ev \
+                    inner join ${enrollment} en on ev.enrollmentid = en.enrollmentid \
+                    where ev.lastupdated <= '${startTime}' and en.programid = ${programId} \
+                    and (${eventDateExpression}) is not null \
+                    and (${eventDateExpression}) > '1000-01-01' \
+                    and ev.deleted = false \
+                    ${fromDateClause}) as temp \
+                    where temp.supportedyear >= ${firstDataYear} \
+                    and temp.supportedyear <= ${latestDataYear}""",
             Map.of(
                 "eventDateExpression", eventDateExpression,
                 "startTime", toLongDate(params.getStartTime()),
